# tj-agent

./: .gitignore  README.md  config.example.json  pyproject.toml
skills/: code-review.md
skills/post-to-xhs/: SKILL.md
skills/setup-xhs-mcp/: SKILL.md
skills/xhs-content-plan/: SKILL.md
skills/xhs-explore/: SKILL.md
skills/xhs-interact/: SKILL.md
skills/xhs-login/: SKILL.md
skills/xhs-profile/: SKILL.md
skills/xhs-search/: SKILL.md
src/: agent.py  config.py  llm.py  main.py  mcp_client.py  skills.py  tools.py
